tests/baselines/reference/enumExtend.errors.txt
tests/cases/compiler/enumExtend.ts(6,5): error TS1132: Enum member expected.
tests/cases/compiler/enumExtend.ts(13,14): error TS2551: Property 'a' does not exist on type 'typeof B'. Did you mean 'A'?
tests/cases/compiler/enumExtend.ts(14,14): error TS2339: Property 'b' does not exist on type 'typeof B'.
tests/cases/compiler/enumExtend.ts(15,14): error TS2339: Property 'c' does not exist on type 'typeof B'.


==== tests/cases/compiler/enumExtend.ts (4 errors) ====
    enum A {
        a, b, c
    }
    
    enum B {
        ...A,
        ~~~
!!! error TS1132: Enum member expected.
        d, e, f
    }
    
    const Aa = A.a;
    const Ab = A.b;
    const Ac = A.c;
    const Ba = B.a;
                 ~
!!! error TS2551: Property 'a' does not exist on type 'typeof B'. Did you mean 'A'?
!!! related TS2728 tests/cases/compiler/enumExtend.ts:6:8: 'A' is declared here.
    const Bb = B.b;
                 ~
!!! error TS2339: Property 'b' does not exist on type 'typeof B'.
    const Bc = B.c;
                 ~
!!! error TS2339: Property 'c' does not exist on type 'typeof B'.
    const Bd = B.d;
    const Be = B.e;
    const Bf = B.f;
    